Fixed menu overflow

--- a/new/css/main.css
+++ b/new/css/main.css
@@ -21,7 +21,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     margin-left: auto;
     margin-right: auto;
-    width: 75%;
+    width: 90%;
     /* Background color and texture */
     background-color: #e3f4ff;
     background-image: url("../img/cream-pixels.png");
